# CPP-Stochastic_Fourier_Solver_with_gnuplot

./: .gitignore  CMakeLists.txt  README.md
include/: D2Fourier.hpp  D2Gauss.hpp  Fourier.hpp  Function.hpp  Gauss.hpp  GnuplotFunctionViewer.hpp  MathUtil.hpp  StochasticSolver.hpp
src/: D2Fourier.cpp  D2Gauss.cpp  Fourier.cpp  Gauss.cpp  GnuplotFunctionViewer.cpp  StochasticSolver.cpp  main.cpp
